feat: add basic auth controller with configuration. For now without jwt
